2007-08-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m ([LDAPSource
	-checkLogin:loginToCheckandPassword:passwordToCheck]): initialize
	didBind to NO to make sure no false authentication is returned if
	the bind operation is not executed.

2007-08-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoDraftObject.m: added support for the
	"In-Reply-To" header field when replying.

	* UI/MainUI/SOGoUserHomePage.m: add the "c_" prefix to the quick
	table field names that are queried.

	* SoObjects/Appointments/SOGoFreeBusyObject.m ([SOGoFreeBusyObject
	-iCalStringForFreeBusyInfos:_infosfrom:_startDateto:_endDate]):
	add the "c_" prefix to the quick table field names that are
	queried.

2007-08-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -lookupCalendarFolderForUID:uid]): add
	"personal" to the ocs path of the appointment folder.

	* UI/MailPartViewers/UIxMailPartViewer.m ([UIxMailPartViewer
	-flatContentAsString]): use latin1 when the encoding is not
	specified, and to reencode data chunk which were not correctly
	decoded with the original charset.

	* SoObjects/Appointments/SOGoAppointmentFolder.m ([SOGoAppointmentFolder -aclUsersForObjectAtPath:objectPathArray])
	([SOGoAppointmentFolder -aclsForUser:uidforObjectAtPath:objectPathArray])
	([SOGoAppointmentFolder -setRoles:rolesforUser:uidforObjectAtPath:objectPathArray])
	([SOGoAppointmentFolder
	-removeAclsForUsers:usersforObjectAtPath:objectPathArray]):
	override those methods to use the "personal" additional directory.

	* SoObjects/SOGo/SOGoUserFolder.m ([-ocsPrivateCalendarPath]):
	append "/personal" to the calendar path to simulate a single
	calendar in a choice of many.

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-lookupName:_keyinContext:acquire:_acquire]): moved the lookup
	methods back here. Moved the folder existence check here, and do